examples/test/testpolicy14887.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14887
  namespace: namespace282
spec:
  podSelector:
    matchLabels:
      key7: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value41
          key45: value29
          key6: value38
      podSelector:
        matchLabels:
          key8: value39
          key12: value31
